syntax = "proto3";

package ebb.game;

// Game State - Complete game state serialization
message GameState {
  string id = 1;
  string seed = 2;
  int32 generation = 3;
  int32 cycle = 4;
  Planet planet = 5;
  repeated Creature creatures = 6;
  repeated Pack packs = 7;
  repeated Tool tools = 8;
  repeated Tribe tribes = 9;
  repeated Building buildings = 10;
  repeated Religion religions = 11;
}

// Planet - Gen0 planetary data
message Planet {
  string id = 1;
  string seed = 2;
  double radius = 3;
  double mass = 4;
  double rotation_period = 5;
  string core_type = 6;
  repeated PlanetaryLayer layers = 7;
  optional Hydrosphere hydrosphere = 8;
  optional Atmosphere atmosphere = 9;
  repeated PrimordialWell primordial_wells = 10;
  string status = 11;
}

message PlanetaryLayer {
  string name = 1;
  double min_radius = 2;
  double max_radius = 3;
  repeated Material materials = 4;
  double density = 5;
  double temperature = 6;
  double pressure = 7;
}

message Material {
  string type = 1;
  double quantity = 2;
  double depth = 3;
  double hardness = 4;
  double density = 5;
  optional double nutritional_value = 6;
}

message Hydrosphere {
  double coverage = 1;
  double average_depth = 2;
  map<string, double> composition = 3;
}

message Atmosphere {
  double pressure = 1;
  map<string, double> composition = 2;
  double thickness = 3;
}

message PrimordialWell {
  string id = 1;
  Location location = 2;
  string type = 3;
  double temperature = 4;
  double pressure = 5;
  map<string, double> composition = 6;
  double energy_level = 7;
}

message Location {
  double latitude = 1;
  double longitude = 2;
  double depth = 3;
}

// Generation-specific messages
message Creature {
  string id = 1;
  string archetype = 2;
  Coordinate position = 3;
  Traits traits = 4;
  map<string, double> composition = 5;
  repeated Need needs = 6;
  double energy = 7;
  int32 age = 8;
  string status = 9;
}

message Coordinate {
  double lat = 1;
  double lon = 2;
}

message Traits {
  string locomotion = 1;
  string foraging = 2;
  string social = 3;
  double excavation = 4;
  double max_reach = 5;
  double speed = 6;
  double strength = 7;
  optional double aggression = 8;
}

message Need {
  string type = 1;
  double current = 2;
  double max = 3;
  double depletion_rate = 4;
  double urgency = 5;
}

message Pack {
  string id = 1;
  repeated string members = 2;
  Coordinate center = 3;
  double cohesion = 4;
  string status = 5;
}

message Tool {
  string id = 1;
  string type = 2;
  map<string, double> composition = 3;
  ToolBoost boost = 4;
  double durability = 5;
  optional string owner = 6;
}

message ToolBoost {
  optional double excavation = 1;
  optional double speed = 2;
  optional double strength = 3;
}

message Tribe {
  string id = 1;
  string name = 2;
  repeated string members = 3;
  Territory territory = 4;
  map<string, double> resources = 5;
  double morale = 6;
  double cohesion = 7;
  string status = 8;
}

message Territory {
  Coordinate center = 1;
  double radius = 2;
  repeated Coordinate nodes = 3;
}

message Building {
  string id = 1;
  string type = 2;
  Coordinate location = 3;
  map<string, double> composition = 4;
  double construction_progress = 5;
  map<string, double> benefits = 6;
  optional string owner = 7;
}

message Religion {
  string id = 1;
  string name = 2;
  repeated string followers = 3;
  repeated Ritual rituals = 4;
  repeated Myth myths = 5;
  optional Coordinate holysite = 6;
  string status = 7;
}

message Ritual {
  string id = 1;
  string name = 2;
  string frequency = 3;
  double fear_reduction = 4;
  repeated string participants = 5;
}

message Myth {
  string id = 1;
  string name = 2;
  string content = 3;
  int32 believers = 4;
  optional string accuracy = 5;
}

// Generation layer communication messages
message GenerationRequest {
  string game_id = 1;
  int32 target_generation = 2;
  int32 cycles = 3;
  optional GameState current_state = 4;
}

message GenerationResponse {
  bool success = 1;
  GameState new_state = 2;
  repeated string errors = 3;
  map<string, string> metadata = 4;
}

// Render data for frontend
message RenderData {
  int32 generation = 1;
  optional Planet planet = 2;
  optional VisualBlueprint visual_blueprint = 3;
  repeated Moon moons = 4;
  optional string stellar_context = 5;
  repeated Creature creatures = 6;
  repeated Tool tools = 7;
  repeated Building buildings = 8;
}

message VisualBlueprint {
  repeated string texture_references = 1;
  map<string, string> visual_properties = 2;
  map<string, string> representations = 3;
}

message Moon {
  string id = 1;
  double radius = 2;
  double distance = 3;
  double orbital_period = 4;
  Vector3 position = 5;
}

message Vector3 {
  double x = 1;
  double y = 2;
  double z = 3;
}

